All done for today

--- a/POS and Inventory/Form1.resx
+++ b/POS and Inventory/Form1.resx
@@ -209,7 +209,7 @@
         GGReivcc9pq6nu0PpBgjKeRL4+0aOCmkSePtJ/g3cebuSa+pY1IMA2sAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnPos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAAAUBJREFUSEvFlL1OwlAYhr2q0uoEGtyIMyTEmVYX4oI3gME7wBugTLj1AjC4Yjv0
